--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="text">I'm <span class="blue-text">Maricar</span> and I'm a <span class="typing-2"></span></div>
                     <p>An entry-level Information Technology (I.T.) professional with a Bachelor's degree in Information Technology from AMA Computer College-Makati.</p>
                     <hr>
-                    <p>My technical proficiency includes C++, HTML, CSS, PHP, JavaScript, VB.NET, and 
+                    <p>My technical proficiency includes C#, C++, HTML, CSS, PHP, JavaScript, VB.NET, and 
                         frameworks such as .NET Framework. Additionally, I am adept at utilizing development tools 
                         like Visual Studio Code and Visual Studio, as well as reporting tools such as SAP Crystal 
                         Reports. My familiarity with databases like MySQL, phpMyAdmin, and Microsoft SQL Server 
